--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(Grupo7_AC3)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Grupo7_AC3 main.cpp)
+add_executable(Grupo7_AC3 main.cpp
+        biblioteca_musica.cpp
+)
