--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,6 @@ project(Grupo7_AC3)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(Grupo7_AC3 main.cpp
-        biblioteca_musica.cpp Cancion.cpp)
+        biblioteca_musica.cpp Cancion.cpp
+        GestorMusica.cpp)
 
